[FIX] Flickering animations on Firefox in Contact section

--- a/src/App.css
+++ b/src/App.css
@@ -613,7 +613,7 @@
   color: #ffffff;
   outline: none;
   border: 0;
-  transition: all 0.3s;
+  transition: filter 0.3s;
 }
 .contact-container__form__input:focus {
   filter: drop-shadow(0 0 0.75rem rgb(62, 15, 173));
@@ -632,7 +632,7 @@
   outline: none;
   border: 0;
   padding: 15px;
-  transition: all 0.3s;
+  transition: filter 0.3s;
 }
 .contact-container__form__message:focus {
   filter: drop-shadow(0 0 0.75rem rgb(62, 15, 173));
@@ -657,6 +657,7 @@
   border-style: solid;
   -o-border-image: linear-gradient(to left, #743ad5, #d53a9d) 1;
      border-image: linear-gradient(to left, #743ad5, #d53a9d) 1;
+  transition: background 0.3s;
 }
 .contact-container__form__button:hover {
   background: linear-gradient(to left, #743ad5, #d53a9d);
@@ -691,7 +692,7 @@
   padding: 10px;
   border-radius: 180px;
   animation: btnGradient 2s linear infinite;
-  transition: all 200ms;
+  transition: filter 0.3s;
 }
 .contact-container__contact-details__socials__icon:hover {
   filter: drop-shadow(0 0 0.75rem rgb(62, 15, 173));
